--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "bootstrap-icons": "^1.11.1",
     "mapbox-gl": "^2.15.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -28,6 +29,7 @@
     "@angular-devkit/build-angular": "^16.2.9",
     "@angular/cli": "^16.2.9",
     "@angular/compiler-cli": "^16.2.0",
+    "@schematics/angular": "^16.2.9",
     "@types/jasmine": "~4.3.0",
     "@types/mapbox-gl": "^2.7.17",
     "dotenv": "^16.3.1",
